fix z-index languages

--- a/hugo/static/scss/layout/__editor.scss
+++ b/hugo/static/scss/layout/__editor.scss
@@ -11,7 +11,7 @@
 }
 
 .html-editor{
-  z-index: 50;
+  z-index: 1;
 }
 
 .input,
