--- a/hugo/static/scss/layout/__navigation.scss
+++ b/hugo/static/scss/layout/__navigation.scss
@@ -4,7 +4,7 @@ header {
   background-color: darken($color-grey-light-1,10);
   background-color: white;
   position: relative;
-  z-index: 11;
+  z-index: 50;
   box-shadow: 0 -0.4rem 0.9rem 0.2rem darken(#676778,20);
 }
 
@@ -389,7 +389,7 @@ header {
     position: absolute;         
     top: calc(100% - 0.25rem);
     left: 50%;
-    z-index: 10;
+    z-index: 600;
     transform: rotateX(-90deg) translateY(0%) translateX(-33%);
     transform-origin: top center;
     
